# rue-lang

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  tsconfig.json
crates/rue-lexer/src/: lib.rs  token.rs  token_kind.rs
crates/rue-parser/: Cargo.toml
crates/rue-parser/src/: lib.rs  parser.rs  program.rs
crates/rue-syntax/: Cargo.toml
crates/rue-syntax/src/: lib.rs  syntax_kind.rs
src/: app.rs  components.rs  error_template.rs  lib.rs  main.rs
src/app/: guide.rs
src/app/guide/: getting_started.rs
src/components/: rue.rs
src/components/rue/: code_block.rs  highlight.rs
style/: main.scss
